src/style.css
/* ... */
#ratings-review {
    height: 30%;
    margin-top: 10px;
    display: none;
    margin-bottom: 15px;
}

#response-box {
    height: 30%;
    margin-top: 10px;
    display: unset;
    margin-bottom: 15px;
}

#caret-up {
    display: none;
}

#caret-down {
    display: unset;
}

.ratings-drop-down {
    text-align: center;
}

.content-holder-ratings i {
    color: #EF0808
}

.ratings-overlay-panel {
    display: flex;
    width: 65%;
    max-height: 85%;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
    -ms-transform: translate(-50%, -50%);
}

.star-rating-value-float-left {
    overflow: none;
    padding: 0;
    margin: 0;
    font-weight: 600;
    font-size: 30px;
    line-height: 30px;
    float: right;
}

.star-rating-panel {
    height: 100%;
    margin: 0;
    padding: 0;
}

.info-card-ratings {
    position: relative;
    border-radius: 3px;
    box-shadow: 0 0 19px 2px rgba(0, 0, 0, 0.15);
    width: 450px;
    margin: 15px auto 10px;
    position: relative;
}

.image-holder-ratings {
    width: 100%;
    max-height: 280px;
    overflow: hidden;
}

.content-holder-ratings {
    width: 100%;
    padding: 20px 20px;
    background-color: var(--background_color);
    border-top: 1px solid rgb(231, 231, 231);
}

.content-holder-ratings button {
    width: 100%;
    border: none;
    border-radius: 6px;
    color: #ffffff;
    background-color: #002353;
    padding: 2px 5px 5px;
    margin-bottom: 5px;
}

.top-padding {
    padding-top: 0.625rem;
}

.reviews-response-container {
    margin-top: 13px;
    height: 100%;
    padding: 1.875rem;
    background: #EEF5FF;
    border: 1px solid #E0E0E0;
    box-sizing: border-box;
    border-radius: 10px;
    overflow: auto;
}

a {
    text-decoration: none;
}

.wrapper {
    width: 100%;
    max-width: 72rem;
    margin: 0 auto;
    background-color: var(--background_color);
    min-height: 10rem;
}

.inner {
    width: 100%;
    margin: 0 auto;
    height: auto;
}

.main-nav-bar {
    max-height: 2.5rem;
    background-color: var(--main_nav_background_color);
    box-sizing: border-box;
}

.main-nav-bar-links {
    display: flex;
    font-size: 0.875rem;
    font-weight: 400;
    line-height: 2.5rem;
}

.main-nav-bar-links a {
    margin-left: 1.875rem;
    color: var(--main_nav_links_color);
}

.content {
    height: 100%;
    margin: 1.875rem;
}

.left-column {
    width: 22.9%;
    min-width: 22.9%;
    float: left;
    /* margin-right: 1.875rem; */
}

.right-column {
    width: 74.2%;
    min-width: 22.9%;
    height: 100%;
    float: right;
}

.right-panel-container {
    height: 100%;
    margin: 1.875rem;
}


/* reviews panel starts here */

.review-heading {
    font-style: normal;
    font-weight: 500;
    font-size: 1.125rem;
    line-height: 1.375rem;
    display: flex;
    align-items: center;
    letter-spacing: 0.05em;
    color: var(--black_text_color);
}

.ratings-panel {
    width: 750.25px;
    margin: 0;
    padding: 0;
    max-height: 3.625rem;
    display: flex;
}

.ratings-panel div {
    float: left;
}

.float-left {
    width: 70%;
}

.float-right {
    text-align: right;
    float: right;
    width: 30%;
}

.float-right div {
    float: right;
    display: flex;
}

.rating-value {
    font-weight: 500;
    font-size: 3rem;
    line-height: 3.625rem;
    display: flex;
    align-items: center;
    letter-spacing: 0.05em;
    margin-right: 0.75rem;
}

.rating-star {
    line-height: 3.625rem;
    float: left;
    display: flex;
    align-items: center;
}

.rating-star-small {
    margin-top: 6px;
    margin-bottom: 32.15px;
    width: 100%;
    color: gold;
    float: left;
    display: flex;
    align-items: center;
}

.reviews-container {
    margin-top: 13px;
    height: 100%;
    padding: 1.875rem;
    background: #FFFFFF;
    border: 1px solid #E0E0E0;
    box-sizing: border-box;
    border-radius: 10px;
    overflow: auto;
}

.review-tile {
    max-width: 100%;
    margin-bottom: 10px;
}

.review {
    max-width: 100%;
    margin-bottom: 1.875rem;
}

.review-text {
    font-style: normal;
    font-weight: 500;
    font-size: 14px;
    line-height: 17px;
    letter-spacing: 0.05em;
}

.response div {
    font-style: normal;
    font-weight: bold;
    font-size: 10px;
    line-height: 12px;
    letter-spacing: 0.05em;
    float: left;
}

.response::after {
    content: "";
    display: table;
    clear: both;
}

.response-value {
    color: #3583ea;
}

.response-text {
    color: #828282;
}

.likes div {
    float: left;
    font-style: normal;
    font-weight: bold;
    font-size: 12px;
    line-height: 14px;
    letter-spacing: 0.05em;
    margin-top: 0.875rem;
    display: flex;
}

.likes::after {
    content: "";
    display: table;
    clear: both;
}

.like-icon {
    float: left;
    height: 12.5px;
    width: 13.69px;
    margin-left: 10.62px;
    margin-right: 30.62px;
    color: #bdbdbd;
}

.like-icon::after {
    content: "";
    display: table;
    clear: both;
}

.like-no-icon {
    float: left;
    color: #bdbdbd;
}

.like-no-icon:hover {
    float: left;
    color: #bdbdbd;
    cursor: pointer;
}

.like-no-icon::after {
    content: "";
    display: table;
    clear: both;
}

.like-yes-icon {
    float: left;
    color: #bdbdbd;
}

.like-yes-icon:hover {
    float: left;
    color: #bdbdbd;
    cursor: pointer;
}

.like-yes-icon::after {
    content: "";
    display: table;
    clear: both;
}

.like-values div {
    float: left;
    margin-top: 5px;
    margin-bottom: 30px;
    display: flex;
}

.like-values::after {
    content: "";
    display: table;
    clear: both;
}

.like-value {
    display: flex;
    font-style: normal;
    font-weight: 500;
    font-size: 10px;
    line-height: 12px;
    letter-spacing: 0.05em;
    margin-right: 56px;
    color: #828282;
}

.like-value::after {
    content: "";
    display: table;
    clear: both;
}
/* ... */

